NetBSD Problem Report #53945

From kardel@pip.kardel.name  Mon Feb  4 14:42:17 2019
Return-Path: <kardel@pip.kardel.name>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 2A4417A1F8
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  4 Feb 2019 14:42:17 +0000 (UTC)
Message-Id: <20190204144205.A16F6DA0D8C@pip.kardel.name>
Date: Mon,  4 Feb 2019 15:42:05 +0100 (CET)
From: kardel@netbsd.org
Reply-To: kardel@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: -current wm WOL regression
X-Send-Pr-Version: 3.95

>Number:         53945
>Category:       kern
>Synopsis:       -current wm WOL for I211 ceased working
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    msaitoh
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Feb 04 14:45:00 +0000 2019
>Closed-Date:    Tue Feb 12 03:09:19 +0000 2019
>Last-Modified:  Tue Feb 12 03:09:19 +0000 2019
>Originator:     Frank Kardel
>Release:        NetBSD 8.99.34
>Organization:

>Environment:


System: NetBSD pip.kardel.name 8.99.34 NetBSD 8.99.34 (GENERIC) #2: Sun Feb 3 13:31:03 CET 2019 kardel@pip.kardel.name:/src/NetBSD/cur/src/obj.amd64/sys/arch/amd64/compile/GENERIC amd64
Architecture: x86_64
Machine: amd64
>Description:
	Somewhere between
        $NetBSD: if_wm.c,v 1.601 2018/11/22 15:09:46 msaitoh Exp $
	and
        $NetBSD: if_wm.c,v 1.620 2019/01/25 08:04:07 msaitoh Exp $
        WOL functionality for I211 stopped working.
	dmesg for 8.99.26
		wm0: for TX and RX interrupting at msix3 vec 0 affinity to 1
		wm0: for TX and RX interrupting at msix3 vec 1 affinity to 2
		wm0: for LINK interrupting at msix3 vec 2
		wm0: PCI-Express bus
		wm0: 64 words iNVM, version 0.4
		wm0: Ethernet address xx:xx:xx:xx:xx:xx
		wm0: Copper
works		wm0: 0xc214420<INVM,IOH_VALID,PCIE,NEWQUEUE,WOL,PLLWA>
	dmesg for 8.99.31-34
		wm0: for TX and RX interrupting at msix3 vec 0 affinity to 1
		wm0: for TX and RX interrupting at msix3 vec 1 affinity to 2
		wm0: for LINK interrupting at msix3 vec 2
		wm0: PCI-Express bus
		wm0: 64 words iNVM, version 0.4
		wm0: Ethernet address xx:xx:xx:xx:xx:xx
		wm0: Copper
fails		wm0: 0xc614420<INVM,IOH_VALID,PCIE,NEWQUEUE,WOL,EEE,PLLWA,CLSEMWA>

>How-To-Repeat:
	boot a kernel with if_wm.c,v 1.601 and see I211 perform WOL
	if_wm.c,v 1.620 and possibly some versions below fail to perform WOL.
	the issue still exists with $NetBSD: if_wm.c,v 1.623 2019/01/31 15:30:23 msaitoh Exp $.

>Fix:
	n/a

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->msaitoh
Responsible-Changed-By: msaitoh@NetBSD.org
Responsible-Changed-When: Tue, 05 Feb 2019 06:47:08 +0000
Responsible-Changed-Why:
mine.


From: Masanobu SAITOH <msaitoh@execsw.org>
To: gnats-bugs@NetBSD.org, kern-bug-people@netbsd.org,
 gnats-admin@netbsd.org, netbsd-bugs@netbsd.org,
 Frank Kardel <kardel@netbsd.org>
Cc: msaitoh@execsw.org
Subject: Re: kern/53945: -current wm WOL regression
Date: Wed, 6 Feb 2019 17:11:42 +0900

 On 2019/02/04 23:45, kardel@netbsd.org wrote:
 >> Number:         53945
 >> Category:       kern
 >> Synopsis:       -current wm WOL for I211 ceased working
 >> Confidential:   no
 >> Severity:       serious
 >> Priority:       high
 >> Responsible:    kern-bug-people
 >> State:          open
 >> Class:          sw-bug
 >> Submitter-Id:   net
 >> Arrival-Date:   Mon Feb 04 14:45:00 +0000 2019
 >> Originator:     Frank Kardel
 >> Release:        NetBSD 8.99.34
 >> Organization:
 > 	
 >> Environment:
 > 	
 > 	
 > System: NetBSD pip.kardel.name 8.99.34 NetBSD 8.99.34 (GENERIC) #2: Sun Feb 3 13:31:03 CET 2019 kardel@pip.kardel.name:/src/NetBSD/cur/src/obj.amd64/sys/arch/amd64/compile/GENERIC amd64
 > Architecture: x86_64
 > Machine: amd64
 >> Description:
 > 	Somewhere between
 >          $NetBSD: if_wm.c,v 1.601 2018/11/22 15:09:46 msaitoh Exp $
 > 	and
 >          $NetBSD: if_wm.c,v 1.620 2019/01/25 08:04:07 msaitoh Exp $
 >          WOL functionality for I211 stopped working.
 > 	dmesg for 8.99.26
 > 		wm0: for TX and RX interrupting at msix3 vec 0 affinity to 1
 > 		wm0: for TX and RX interrupting at msix3 vec 1 affinity to 2
 > 		wm0: for LINK interrupting at msix3 vec 2
 > 		wm0: PCI-Express bus
 > 		wm0: 64 words iNVM, version 0.4
 > 		wm0: Ethernet address xx:xx:xx:xx:xx:xx
 > 		wm0: Copper
 > works		wm0: 0xc214420<INVM,IOH_VALID,PCIE,NEWQUEUE,WOL,PLLWA>
 > 	dmesg for 8.99.31-34
 > 		wm0: for TX and RX interrupting at msix3 vec 0 affinity to 1
 > 		wm0: for TX and RX interrupting at msix3 vec 1 affinity to 2
 > 		wm0: for LINK interrupting at msix3 vec 2
 > 		wm0: PCI-Express bus
 > 		wm0: 64 words iNVM, version 0.4
 > 		wm0: Ethernet address xx:xx:xx:xx:xx:xx
 > 		wm0: Copper
 > fails		wm0: 0xc614420<INVM,IOH_VALID,PCIE,NEWQUEUE,WOL,EEE,PLLWA,CLSEMWA>
 > 
 >> How-To-Repeat:
 > 	boot a kernel with if_wm.c,v 1.601 and see I211 perform WOL
 > 	if_wm.c,v 1.620 and possibly some versions below fail to perform WOL.
 > 	the issue still exists with $NetBSD: if_wm.c,v 1.623 2019/01/31 15:30:23 msaitoh Exp $.
 > 
 >> Fix:
 > 	n/a
 > 
 >> Unformatted:

   I have only one machine which has I211 (Shuttle DS57U).
 When doing "sysctl -w hw.acpi.sleep.state=3", it doesn't enter
 S3 but completely do power down... I can't test with this machine...

   I verified that my own ICH8 and PCH2 machine back from suspend, so
 not all chips have this problem.

 So, please

   0) could you show me the full dmesg?

   1) Is the link LED up or down when the machine is suspended?

   3) Does your machine recover from suspend when power or sleep button
      pressed?

 I'll try to test on some other machines.

 Thanks in advance.

 -- 
 -----------------------------------------------
                  SAITOH Masanobu (msaitoh@execsw.org
                                   msaitoh@netbsd.org)

From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53945 CVS commit: src/sys/dev/pci
Date: Thu, 7 Feb 2019 04:03:25 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Thu Feb  7 04:03:25 UTC 2019

 Modified Files:
 	src/sys/dev/pci: if_wm.c

 Log Message:
  Fix a bug that WOL didn't work on some chips since if_wm.c rev. 1.60.
 Set WUC_APME bit older than PCH. Will fixes PR kern/53945 reported by kardel@.
 Tested with my own 82574 card.


 To generate a diff of this commit:
 cvs rdiff -u -r1.624 -r1.625 src/sys/dev/pci/if_wm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53945 CVS commit: [netbsd-8] src/sys/dev/pci
Date: Mon, 11 Feb 2019 13:44:34 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Mon Feb 11 13:44:34 UTC 2019

 Modified Files:
 	src/sys/dev/pci [netbsd-8]: if_wm.c

 Log Message:
 Pull up following revision(s) (requested by msaitoh in ticket #1189):

 	sys/dev/pci/if_wm.c: revision 1.622
 	sys/dev/pci/if_wm.c: revision 1.624
 	sys/dev/pci/if_wm.c: revision 1.625

  We now have IFM_2500_KX and IFM_1000_KX, so use them.

  -

  I21[01]'s RAL size is not 15 but 16(== 82575's value). Same as other OSes.

  -

  Fix a bug that WOL didn't work on some chips since if_wm.c rev. 1.610.

 Set WUC_APME bit older than PCH. Will fixes PR kern/53945 reported by kardel@.
 Tested with my own 82574 card.


 To generate a diff of this commit:
 cvs rdiff -u -r1.508.4.29 -r1.508.4.30 src/sys/dev/pci/if_wm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Tue, 12 Feb 2019 03:09:19 +0000
State-Changed-Why:
Fixed and pulled-up.
Thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.